Issue fix: Remove item from eq link not visible

--- a/content/site.css
+++ b/content/site.css
@@ -88,7 +88,6 @@
     }
 
     .eqItem{
-        width: 300px;
         background: #eee;
         list-style: none;
         margin: 2px;
